# robohack2026

./: .gitignore  README.md
.kiro/specs/yolo-person-detector/: .config.kiro  design.md  requirements.md  tasks.md
docs/: HUMAN_FOLLOWING_AND_CONTROL.md
robot_motion/: package.xml  setup.py
robot_motion/config/: arm_poses.yaml
robot_motion/launch/: person_follow.launch.py  person_follow_lidar.launch.py
robot_motion/robot_motion/: arm_pose_node.py  body_follower_node.py  head_tracker_node.py  person_follow_node.py  yolo_wrapper.py
robot_vision/: package.xml  setup.py
robot_vision/config/: stereo_detector.yaml
robot_vision/launch/: stereo_detector.launch.py
x2_motion_audio_tools/: README.md  package.xml  requirements-person.txt  setup.py
x2_motion_audio_tools/launch/: x2_person_follow.launch.py  x2_person_track_torso.launch.py  x2_stereo_head_track.launch.py
x2_motion_audio_tools/x2_motion_audio_tools/: x2_go_to_offset_raise_arms.py  x2_person_follow.py  x2_person_track_torso.py  x2_stereo_person_follow.py  x2_turn_to_person_tts.py  x2_yolo_wrapper.py
yolo_person_detector/: README.md  package.xml  setup.py
yolo_person_detector/config/: yolo_params.yaml
yolo_person_detector/launch/: stereo_person_pipeline.launch.py  yolo_follower.launch.py  yolo_pipeline.launch.py
yolo_person_detector/yolo_person_detector/: camera_selector_node.py  stereo_final_annotator_node.py  stereo_image_view_node.py  yolo_detector_node.py
